# agilex5e-ed-gsrd

./: .clang-format  .gitignore  AGENTS.md  Makefile  README.md  platform_config.mk  pyproject.toml  requirements.txt  verible-format.txt
a5ed013-devkit-oobe/: platform_config.mk
a5ed013-devkit-oobe/baseline-a55/: README.md  baseline_a55.dawf  baseline_a55.qsf  baseline_a55.sdc  baseline_a55.sv  baseline_top.qsys  fabric_subsys.qsys  hps_subsys.qsys  niosv_subsys.qsys  shell_subsys.qsys  swbuild_config.mk
a5ed013-devkit-oobe/legacy-baseline/: .gitignore  README.md  hps_subsys.qsys  jtag.sdc  jtag_subsys.qsys  legacy_baseline.qsf  legacy_baseline.sdc  legacy_baseline_top.v  peripheral_subsys.qsys  qsys_top.qsys  top.qpf
a5ed065a-modular-devkit-som/: platform_config.mk
a5ed065a-modular-devkit-som/baseline-a55/: .gitignore  README.md  baseline_a55.qsf  baseline_top.qsys  fabric_subsys.qsys  hps_subsys.qsys  niosv_subsys.qsys  qsys_update.tcl  shell_subsys.qsys
a5ed065a-premium-devkit-debug2/baseline-a55/: .gitignore  README.md  baseline_a55.qsf  baseline_top.qsys  (+5 more)
a5ed065a-premium-devkit-nand/: platform_config.mk
a5ed065a-premium-devkit-oobe/: platform_config.mk
a5ed065b-premium-devkit-debug2/: platform_config.mk
a5ed065b-premium-devkit-emmc/: platform_config.mk
a5ed065b-premium-devkit-oobe/: platform_config.mk
a5ed065es-premium-devkit-debug2/: Makefile  platform_config.mk
a5ed065es-premium-devkit-oobe/: Makefile  platform_config.mk
a5ed065es-premium-devkit-oobe/baseline/software/FreeRTOS_helloworld/: CMakeLists.txt  README.md  hello_world.c
(+795 files in other folders)
